Подправлены стили и разметка, добавлена ссылка на описание.

--- a/index.html
+++ b/index.html
@@ -9,17 +9,24 @@
 
 <body>
 
-	<div class="page-head">
-		<h1 class="product-title"><a href=".">Ботобор</a></h1>
-    <div class="product-description">Защита веб-форм от спам-ботов</div>
-    
-    <a href="https://github.com/mekras/botobor"><img class="fork-me" src="http://s3.amazonaws.com/github/ribbons/forkme_right_darkblue_121621.png" alt="Fork me on GitHub"></a>
-    
-	</div>
-	
-	<ul>
-		<li><a href="api/">API</a></li>
-	</ul>
+	<header class="page-head">
+		<hgroup>
+            <h1 class="product-title"><a href="." class="product-title__link">Ботобор</a></h1>
+            <h2 class="product-description">Защита веб-форм от спам-ботов</h2>
+        </hgroup>
+        <a href="https://github.com/mekras/botobor"><img class="fork-me"
+            src="http://s3.amazonaws.com/github/ribbons/forkme_right_darkblue_121621.png"
+            alt="Fork me on GitHub"></a>
+	</header>
+
+    <article class="docs">
+        <h1 class="docs__title">Документация</h1>
+        <ul class="docs__list">
+            <li class="docs__item"><a href="https://github.com/mekras/botobor#readme"
+                class="docs__link" target="__blank">Описание и примеры</a></li>
+            <li class="docs__item"><a href="api/" class="docs__link" target="__blank">API</a></li>
+        </ul>
+    </article>
 
 </body>
 </html>
